cleanup core2